- adding MapDatabase backend for our TileStache provider - fixing some renering bugs on nexus phone and some refactoring and cleanup